--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["index.ts", "src/window.d.ts"],
+    "include": ["index.ts"],
     "compilerOptions": {
         "lib": ["ESNext", "DOM"],
         "target": "ESNext",
