--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react"
   ],
   "peerDependencies": {
-    "react": ">=16.8",
-    "groundstate": "^1.1.0"
+    "react": ">=16.8"
   },
   "devDependencies": {
     "@types/react": ">=16.8",
-    "esbuild": "^0.25.3",
+    "esbuild": "^0.25.9",
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "groundstate": "^1.1.18"
   }
 }
